fix horizontal scroll on mobile

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ a:hover {
 
 html {
 	padding-bottom: 100px;
+	overflow-x: hidden;
 }
 
 .flex-container {
